--- a/HomePage.html
+++ b/HomePage.html
@@ -18,25 +18,28 @@
           <a href="#" class="pages">About Us</a>
         </div>
       </div>
-      <div class="slider">
-        <div class="slide_viewer">
-          <div class="slide_group">
-            <div class="slide">
-              <img src="./assets/Bill Gates.jpg" alt="slider1" />
-            </div>
-            <div class="slide">
-              <img src="./assets/Steve Jobs.jpg" alt="slider2" />
-            </div>
-            <div class="slide">
-              <img src="./assets/Albert Einstein.jpg" alt="slider3" />
-            </div>
-            <div class="slide">
-              <img src="./assets/Adolf Hitler.jpg" alt="slider4" />
-            </div>
-          </div>
-        </div>
+      <div id="captioned-gallery">
+        <figure class="slider">
+          <figure>
+            <img src="./assets/Bill Gates.jpg" alt />
+          </figure>
+          <figure>
+            <img src="./assets/Steve Jobs.jpg" alt />
+          </figure>
+          <figure>
+            <img src="./assets/Albert Einstein.jpg" alt />
+          </figure>
+          <figure>
+            <img src="./assets/CR7.jpg" alt />
+          </figure>
+          <figure>
+            <img src="./assets/Elon Musk.jpg" alt />
+          </figure>
+        </figure>
       </div>
     </header>
-    <script src="script.js"></script>
+
+    <div class="seperator"></div>
+    <main></main>
   </body>
 </html>
