--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -186,7 +186,7 @@
             >
               <div class="content">
                 <h3>
-                  <strong>why to Choose Padhale?</strong>
+                  <strong>Why to Choose Padhale?</strong>
                   Isme itni kya khaas baat hai??
                 </h3>
                 <p>
