Notes Page added

--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -100,7 +100,7 @@
               journey towards Excellence!!
             </h2>
             <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
+              <a href="#features" class="btn-get-started scrollto">Direct kaam ki baat</a>
               <a
                 href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
                 class="glightbox btn-watch-video"
@@ -222,7 +222,7 @@
                       data-bs-target="#accordion-list-2"
                       class="collapsed"
                       ><span>02</span>  Resource Abundance
-                       <i class="bx bx-chevron-down icon-show"></i
+                      <i class="bx bx-chevron-down icon-show"></i
                       ><i class="bx bx-chevron-up icon-close"></i
                     ></a>
                     <div
@@ -377,10 +377,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Fun Zone</a></h4>
+                <h4><a href="fun.html">Fun Zone</a></h4>
                 <p>
-                  Voluptatum deleniti atque corrupti quos dolores et quas
-                  molestias excepturi
+                  Agar padhai krte krte thoda chill krne ka man ho jaye to yaha aapko aapke refreshment k liye saare options hai.
                 </p>
               </div>
             </div>
@@ -392,7 +391,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-file"></i></div>
-                <h4><a href="">Hadwritten Notes</a></h4>
+                <h4><a href="notes.html">Hadwritten Notes</a></h4>
                 <p>
                   Class me jo bhi padhaya gaya hai wo sb. Bas itna padh lo aur
                   pgir aur kuch padhne ki jaroorat nahi.
@@ -407,7 +406,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4><a href="">Playlists</a></h4>
+                <h4><a href="playlists.html">Playlists</a></h4>
                 <p>
                   Home-Work, Journal, Assignment likhte waqt agar kuch sun ne ka
                   man ho to inhe try kr skte ho.
@@ -422,7 +421,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-layer"></i></div>
-                <h4><a href="">Books and Resources</a></h4>
+                <h4><a href="books.html">Books and Resources</a></h4>
                 <p>
                   Agar aur kuch padhne ki iccha ho to always you can check this!
                 </p>
@@ -536,7 +535,7 @@
       <!-- End Team Section -->
 
       <!-- ======= Frequently Asked Questions Section ======= -->
-      <section id="faq" class="faq section-bg">
+      <section id="faq" class="faq section-bg" style="background-color: #fff;">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Frequently Asked Questions</h2>
@@ -662,138 +661,11 @@
         </div>
       </section>
       <!-- End Frequently Asked Questions Section -->
-
-      <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
-        <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <h2>Contact</h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-5 d-flex align-items-stretch">
-              <div class="info">
-                <div class="address">
-                  <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
-                </div>
-
-                <div class="email">
-                  <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>info@example.com</p>
-                </div>
-
-                <div class="phone">
-                  <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
-                </div>
-
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                  frameborder="0"
-                  style="border: 0; width: 100%; height: 290px"
-                  allowfullscreen
-                ></iframe>
-              </div>
-            </div>
-
-            <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form
-                action="forms/contact.php"
-                method="post"
-                role="form"
-                class="php-email-form"
-              >
-                <div class="row">
-                  <div class="form-group col-md-6">
-                    <label for="name">Your Name</label>
-                    <input
-                      type="text"
-                      name="name"
-                      class="form-control"
-                      id="name"
-                      required
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <label for="name">Your Email</label>
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="email"
-                      id="email"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="name">Subject</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="subject"
-                    id="subject"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="name">Message</label>
-                  <textarea
-                    class="form-control"
-                    name="message"
-                    rows="10"
-                    required
-                  ></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Your message has been sent. Thank you!
-                  </div>
-                </div>
-                <div class="text-center">
-                  <button type="submit">Send Message</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Contact Section -->
     </main>
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="footer-newsletter">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-6">
-              <h4>Join Our Newsletter</h4>
-              <p>
-                Tamen quem nulla quae legam multos aute sint culpa legam noster
-                magna
-              </p>
-              <form action="" method="post">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Subscribe"
-                />
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <div class="footer-top">
         <div class="container">
