Playlists Page added

--- a/Padhale - Website for College/playlists.html
+++ b/Padhale - Website for College/playlists.html
@@ -73,9 +73,6 @@
             </ul>
           </li> -->
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-            <li>
-              <a class="getstarted scrollto" href="#about">Get Started</a>
-            </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -90,247 +87,74 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Handwritten Notes</li>
+            <li>Playlists</li>
           </ol>
-          <h2>Handwritten Notes</h2>
+          <h2>Recommended Playlists</h2>
         </div>
       </section>
       <!-- End Breadcrumbs -->
 
-      <section class="inner-page">
-        <!-- #3rd Semester Notes -->
+      <section class="playlist">
         <div class="container">
-          <h2>3rd Semester :</h2>
-          <h2 style="font-size: x-large">UT-1</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Computer Architecture [CAT202]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Suresh Balpande
-              </p>
+          <p>
+            College life can be a whirlwind of assignments, exams, and late-night study sessions. But it doesn't have to be all work and no play. Our collection of curated playlists is here to add a touch of rhythm to your study routine. From groovy melodies to calming tunes, our playlists are perfect for college students looking to enhance their focus, boost productivity, and make studying more enjoyable. Give your study sessions a musical twist and discover the perfect soundtrack to your college journey.<br><br><br><br><br>
+          </p>  
+        
+          <div class="playlists">
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1CjEmJU3g_XD79gmpIB10V5KVOYMzMnMM/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Cyber Laws and Ethics in IT [HUT257]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Durgesh Sharma
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1yPexFkeVRrQ-8PQQCNikft4RjB8xXh6z/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Data Structures [CAT201]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Amit Pimpalkar
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1ZlCn29eqRcsh8gvb9zkZD0CkPKIZr6lj/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Mathematics for Machine Learning [MAT271]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1KMsI8JM3L7HZa4b8OnyuMAaZpxjYsp_Q/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Operating System [CAT203]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Priya Parkhi
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1MLtTu_NJOAvP7Qc6J8hxjY9II0dKF0ya/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-        </div>
-
-        <!-- #2nd Semester Notes -->
-        <br /><br /><br />
-        <div class="container">
-          <h2>2nd Semester :</h2>
-          <h2 style="font-size: x-large">UT-2</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Calculus [MAT101]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1NNHPx07Wa0L9NuB80tblvGFtdyslpbCH/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Digital Electronics [CAT103]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Ajay Tinguriya
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1m2hmDneSeeMkHqlYRdwn9Lv9fluYDiKY/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Introduction to Quantum Computing [PHT154]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Rupesh Talewar
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a
-              href="https://drive.google.com/drive/folders/1RAQDrNBSJZ1m1Tk0yN7E0ePzeucFvqlh?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Object Oriented Programming [CAT104]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Kavita Kalambe
-              </p>
+            <div class="card">
+              <img src="./assets/img/team/#" alt="Playlist dp">
+              <h5 class="title1">Name : Name of playlist</h5>
+              <h5 class="title">Genre : Genre of songs in playlist</h5>
+              <h5 class="title">Recommended by : Name of person</h5>
             </div>
-            <a href="#"><button>Dowload Kare !!</button></a>
-          </div>
-        </div>
-
-        <br /><br />
-        <div class="container">
-          <h2 style="font-size: x-large">UT-1</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Calculus [MAT101]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/drive/folders/1asZlUZN5oNvrU_6vxNmjQjRKYcvHvTiw?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Digital Electronics [CAT103]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Ajay Tinguriya
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/file/d/1NCSniM0onNwRc-jgCt7HoPur43nMbRDI/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Introduction to Quantum Computing [PHT154]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Rupesh Talewar
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/drive/folders/1pQzMNSJ8HEblnweHZxYTC786dTqBtnld?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Object Oriented Programming [CAT104]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Kavita Kalambe
-              </p>
-            </div>
-            <a href="#"><button>Dowload Kare !!</button></a>
-          </div>
-        </div>
-
-        <!-- #1st Semester Notes -->
-        <br /><br /><br />
-        <div class="container">
-          <h2>1st Semester :</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Chemistry [CHT152]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Avinash Bharati
-              </p>
-            </div>
-            <a href=""><button>Dowload Kare !!</button></a>
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Differential Equation, Linear Algebra,Statistics and Probability
-                [MAT152]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
-            </div>
-            <a href="#"
-              ><button style="width: 200px">Dowload Kare !!</button></a
-            >
           </div>
         </div>
       </section>
