Books Page added(not completed)

--- a/Padhale - Website for College/books.html
+++ b/Padhale - Website for College/books.html
@@ -90,18 +90,18 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Handwritten Notes</li>
+            <li>Books</li>
           </ol>
-          <h2>Handwritten Notes</h2>
+          <h2>Books and Other resources</h2>
         </div>
       </section>
       <!-- End Breadcrumbs -->
 
       <section class="inner-page">
-        <!-- #3rd Semester Notes -->
         <div class="container">
-          <h2>3rd Semester :</h2>
-          <h2 style="font-size: x-large">UT-1</h2>
+          <p>
+            Welcome to our Books section, a treasure trove of valuable knowledge and guidance for our college friends. We understand the importance of having the right reference materials to excel in your academic pursuits. Whether you're seeking textbooks, reference guides, or supplementary reading material, we've carefully curated a selection of must-have books that align with your college curriculum. Explore our recommendations to find the resources that will not only support your studies but also ignite your passion for learning. Let's embark on a journey of knowledge together, one book at a time.<br><br>
+          </p>
           <div class="notes-box">
             <div class="theory">
               <h2 style="margin-left: 20px; font-size: x-large">
@@ -174,162 +174,6 @@
             <a
               href="https://drive.google.com/file/d/1MLtTu_NJOAvP7Qc6J8hxjY9II0dKF0ya/view?usp=sharing"
               ><button>Dowload Kare !!</button></a
-            >
-          </div>
-        </div>
-
-        <!-- #2nd Semester Notes -->
-        <br /><br /><br />
-        <div class="container">
-          <h2>2nd Semester :</h2>
-          <h2 style="font-size: x-large">UT-2</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Calculus [MAT101]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/file/d/1NNHPx07Wa0L9NuB80tblvGFtdyslpbCH/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Digital Electronics [CAT103]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Ajay Tinguriya
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/file/d/1m2hmDneSeeMkHqlYRdwn9Lv9fluYDiKY/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Introduction to Quantum Computing [PHT154]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Rupesh Talewar
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/drive/folders/1RAQDrNBSJZ1m1Tk0yN7E0ePzeucFvqlh?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Object Oriented Programming [CAT104]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Kavita Kalambe
-              </p>
-            </div>
-            <a href="#"><button>Dowload Kare !!</button></a>
-          </div>
-        </div>
-
-        <br /><br />
-        <div class="container">
-          <h2 style="font-size: x-large">UT-1</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Calculus [MAT101]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/drive/folders/1asZlUZN5oNvrU_6vxNmjQjRKYcvHvTiw?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Digital Electronics [CAT103]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Ajay Tinguriya
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/file/d/1NCSniM0onNwRc-jgCt7HoPur43nMbRDI/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Introduction to Quantum Computing [PHT154]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Rupesh Talewar
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/drive/folders/1pQzMNSJ8HEblnweHZxYTC786dTqBtnld?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Object Oriented Programming [CAT104]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Kavita Kalambe
-              </p>
-            </div>
-            <a href="#"><button>Dowload Kare !!</button></a>
-          </div>
-        </div>
-
-        <!-- #1st Semester Notes -->
-        <br /><br /><br />
-        <div class="container">
-          <h2>1st Semester :</h2>
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Chemistry [CHT152]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Avinash Bharati
-              </p>
-            </div>
-            <a href=""><button>Dowload Kare !!</button></a>
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Differential Equation, Linear Algebra,Statistics and Probability
-                [MAT152]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
-            </div>
-            <a href="#"
-              ><button style="width: 200px">Dowload Kare !!</button></a
             >
           </div>
         </div>
